Add Unit support to histo, sums and gauges.
Refactor: make Sum::count to be a long.